Add battery_sys for sampling battery voltage
This patch adds a module to sample the battery voltage through the ADC.
At the moment the ESP32 ADC does not support extra samples.

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -14,8 +14,11 @@ project(ld2410_test)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror -Wall -Wextra")
 
 target_include_directories(app PRIVATE
+    src/system
+    src/util
 )
 
 target_sources(app PRIVATE
   src/main.c
+  src/system/battery_sys.c
 )
