--- a/firmware/prj.conf
+++ b/firmware/prj.conf
@@ -2,3 +2,7 @@ CONFIG_LOG=y
 
 CONFIG_GPIO=y
 CONFIG_I2C=y
+CONFIG_ADC=y
+
+# ESP32 ADC driver does not support multiple samples
+CONFIG_BATTERY_VOLTAGE_EXTRA_SAMPLING_COUNT=0
