Add missing files

--- a/firmware/prj.conf
+++ b/firmware/prj.conf
@@ -6,3 +6,5 @@ CONFIG_ADC=y
 
 # ESP32 ADC driver does not support multiple samples
 CONFIG_BATTERY_VOLTAGE_EXTRA_SAMPLING_COUNT=0
+
+CONFIG_AC057TC1_DISPLAY=y
